frontend/src/assets/reset.css
@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400);

.footer #button{
	width:50px;
	height:50px;
	border: #878787  12px solid;
	border-radius:35px;
	margin:0 auto;
	position:relative;
	-webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    -ms-transition: all 1s ease;
    transition: all 1s ease;
}
.footer #button:hover{
	width:50px;
	height:50px;
	border: #3A3A3A 12px solid;
	-webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    -ms-transition: all 1s ease;
    transition: all 1s ease;
	position:relative;
}
.footer {
	bottom:0;
	left:0;
	position:fixed;
    width: 100%;
    height: 2em;
    overflow:hidden;
    margin:0 auto;
	-webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    -ms-transition: all 1s ease;
    transition: all 1s ease;
	z-index:999;
}
.footer:hover {
	-webkit-transition: all 1s ease;
    -moz-transition: all 1s ease;
    -o-transition: all 1s ease;
    -ms-transition: all 1s ease;
    transition: all 1s ease;
	height: 10em;
}
.footer #container{
	width:100%;
    height:100%;
    position:relative;
    top:0;
    left:0;
	background: #0E95E9;
}
.footer #cont{
    position:relative;
    top:-45px;
    right:190px;
	width:150px;
	height:auto;
	margin:0 auto;
}
.footer_center{
	width:100%;
	float:left;
    text-align:center;
}
.footer h3{
	font-weight: 100;
    margin-top: 10px;
}

.footer h2{
	font-weight: 100;
    margin-top: 10px;
}

.footer img{
    height: auto;
    float: left;
    height: 7em;
}

.pageselect{
    padding-bottom: 70px;
}

.card{
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    border-radius: 20%;
}
  
.card:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.card-img-top{
    width: 70%;
    margin-left: 15%;
    margin-top: 15%;
    margin-bottom: 5%;
    border: 1px solid #858f97;
    border-radius: 30%;
}

.searchbar{
    position: fixed;
    width: 100%;
    z-index: 5;
}

.menu, #searchbar{
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
    padding-top: 10px;
    padding-bottom: 15px;
    background-color: whitesmoke;
}

.app{
    background:
    linear-gradient(135deg, #858f97 21px, #a8a8a8 22px, #a8a8a8 24px, transparent 24px, transparent 67px, #a8a8a8 67px, #a8a8a8 69px, transparent 69px),
    linear-gradient(225deg, #858f97 21px, #a8a8a8 22px, #a8a8a8 24px, transparent 24px, transparent 67px, #a8a8a8 67px, #a8a8a8 69px, transparent 69px)0 64px;
    background-color:#858f97;
    background-size: 64px 128px;
    background-attachment: fixed;
}

.body{
    padding-top: 100px;
}

.filter{
    padding-bottom: 7px;
}

.filter .input-group-prepend{
    margin-right: -7px;
    margin-left: -7px;
    margin-top: -7px;
    margin-bottom: -7px;
}

.range-pages .dropdown-menu.show{
    left: -535% !important;
    width: 540%;
}

